--- a/ConcurrentBST/nbproject/private/private.properties
+++ b/ConcurrentBST/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lorenzo\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/home/lorenzo/.netbeans/8.0.2/build.properties
