--- a/ConcurrentBST/nbproject/project.properties
+++ b/ConcurrentBST/nbproject/project.properties
@@ -5,6 +5,21 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=ConcurrentBST
 application.vendor=Lorenzo
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterActiveProfile=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterEnabled=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterLocation=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.enableFormatAsSaveAction=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.preserveBreakPoints=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.showNotifications=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.useProjectSettings=false
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab=4
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-line-wrap=none
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=project
+auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.wrapMethodCallArgs=WRAP_IF_LONG
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
